# omuti

./: 07gdf_to_shapes.py  09imageoverlay.py  10extract_samples.py  11tfrecord.py  README.md  README.txt  aa_cartopy_world_map.py  bb_geopandas_read_gpkg.py  cc_cartopy_shapes.py  dd_fiona_read_gpkg.py  ee_iso3166.py  environment.yml  example.tfrecords  ff_gdal_read_tif.py  gg_raster_subset.py  hh_raster_reproject.py  ii_random_raster_subset.py  pyproject.toml  requirements.txt  zz_vocdata.py
darknet/omuti/: omuti.cfg  omuti.data
data/: README.md  gadm40_FRA_0.shp
notebooks/: Demo.ipynb
omuti/: __init__.py  utils.py
omuti/torch/: dataset.py  evaluate.py  main.py  model.py  predict.py  preprocess.py  utilities.py  visualize.py
scripts/: bb_geopandas_read_gpkg.py  cc_cartopy_shapes.py  dd_fiona_read_gpkg.py  ee_iso3166.py  ff_gdal_read_tif.py  fg_rasterio_read_tif.py  gg_raster_subset.py  hh_raster_reproject.py  ii_random_raster_subset.py  jj_gdf_to_shapes.py  kk_imageoverlay.py  ll_extract_samples.py  lm_extract_samples.py  lm_extract_samples_deepforest.py  mm_tfrecord.py  train.py
